<resources>
    <string name="app_name">Insta</string>
    <string name="or">OR</string>
    <string name="sign_up_with_email">Sign Up with Email</string>
    <string name="login_with_email">Login with Email</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="name_hint">Enter your name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="network_login_again">Please log in again</string>

    <string name="email_field_invaild">Not a valid email</string>
    <string name="email_field_empty">Email can\'t be empty</string>
    <string name="password_field_empty">Password can\'t be empty</string>
    <string name="password_field_small_length">Password less than 6 digits</string>
    <string name="name_field_empty">Name can\'t be empty</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_add_photos">Photo</string>
    <string name="menu_profile">Profile</string>

    <!--posts-->
    <string name="post_like_label">%1d Likes</string>
    <string name="camera">camera</string>
    <string name="gallery">Gallery</string>
    <string name="try_again">tryAgain</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_photo">Change Photo</string>
    <string name="logout">Logout</string>
</resources>
