<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/padding_30"
    android:focusableInTouchMode="true"
    tools:context=".ui.login.LoginActivity">


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:translationZ="5dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:src="@drawable/instagram_logo"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top"
        app:layout_constraintTop_toTopOf="parent"

        />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_42"
        android:background="@drawable/edittext_background"
        android:hint="@string/enter_your_email"
        android:padding="@dimen/margin_16"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_16"
        app:layout_constraintTop_toBottomOf="@+id/logo" />


    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:background="@drawable/edittext_background"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="@dimen/margin_16"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_16"
        app:layout_constraintTop_toBottomOf="@+id/email_et" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:background="@drawable/login_button_background"
        android:text="@string/login"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/password_et" />


    <View
        android:id="@+id/right_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_45"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/text"
        app:layout_constraintEnd_toStartOf="@+id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <TextView
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_45"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/left_divider"
        app:layout_constraintStart_toEndOf="@+id/right_divider"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <View
        android:id="@+id/left_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_45"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <TextView
        android:id="@+id/sign_up_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_45"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/sign_up_with_email"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_16"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/left_divider"

        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />


</androidx.constraintlayout.widget.ConstraintLayout>